<resources>
    <string name="app_name">FinalYearProject</string>
    <string name="go_back">Go Back</string>
    <string name="underlined_sign_up"><u>Sign Up</u></string>
    <string name="new_user">New User?</string>
    <string name="underlined_forget_password"><u>Forget Password?</u></string>
    <string name="underlined_sign_in"><u>Sign In</u></string>
    <string name="underlined_contact_us"><u>Contact Us?</u></string>
    <string name="underlined_recover_by_email"><u>Email Recovery</u></string>
    <string name="email_recovery_title">Recovery By Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calendar">Calendar</string>
    <string name="check_email">Please Check Your Email</string>
    <string name="recovery_msg">Recovery your password by email validation</string>
    <string name="ok">OK</string>
    <string name="confirm_delete_haha">Confirm Delete Followers?</string>
    <string name="confirm_delete">Confirm Unfollow %1$s ?</string>
    <string name="confirm_delete_announcement">Confirm Delete ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_will_be_permanently">Delete will be permanently</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_internet">No Internet</string>
    <string name="opps">OOPS!!!</string>
    <string name="no_internet_description">No Internet connection found, check your connection</string>
    <string name="reload">RELOAD</string>
    <string name="about_us">About Us</string>
    <string name="about_us_title">TARUMT Campus Hub</string>
    <string name="welcome_to_tarumt_campus_hub">Welcome to the free and innovative TARUMT Campus Hub. We are the TARUMT Campus Hub, a "learning interaction" platform that connects TARUMT students or Staff.</string>
    <string name="our_mission">Our Mission:</string>
    <string name="mission_description">At TARUMT Campus Hub, our mission is to empower students. We provide a dedicated platform for students to find, collect and exchange learning materials and share interesting things. We believe in breaking down barriers so that everyone can get more cohesive information and unified campus information on the platform. No one outside the campus will use the platform, avoiding information clutter.</string>
    <string name="why_tarumt_campus_hub">Why TARUMT Campus Hub?</string>
    <string name="why_description">TARUMT Campus Hub is the preferred learning interaction platform for students and Staff, as we provide practical features and friendly experiences to build a tight-knit community of learning and shared entertainment. Choosing TARUMT Campus Hub means choosing a learning platform that travels with you and grows with you, injecting vitality and possibility into your academic journey.</string>
    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="problem_type">Problem Type</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="success_contactus">Success to send!</string>
    <string name="success_contactus_text">Your message has been sent successfully. We will reply you as soon as possible.</string>
    <string name="add_a_title">Enter a Title...</string>
    <string name="type_something_to_describe">Enter Description here ....</string>
    <string name="select_a_category">Category</string>
    <string name="select_a_learning_style">Select a Learning Style</string>
    <string name="next">Next</string>
    <string name="profileName">Name</string>
    <string name="profileLanguages">Language</string>
    <string name="profileMobile_phone">Mobile Phone</string>
    <string name="profileBirthday">Birthday</string>
    <string name="profileDescription">Description</string>
    <string name="profileSave">Save</string>
    <string name="filter">Filter Post</string>
    <string name="category">Category</string>
    <string name="learning_style">Learning Style</string>
    <string name="profile_description">Description…</string>
    <string name="discover_friend">Discover Users</string>
    <string name="add_friend">Follow</string>
    <string name="message">Message</string>
    <string name="friend">Follower</string>
    <string name="friends">Followers</string>
    <string name="all_friends">All Followers</string>
    <string name="_0_friends">0 Followers</string>
    <string name="typing">Typing...</string>
    <string name="all">ALL</string>
    <string name="InnerChatTyping">Typing...</string>
    <string name="requested">Requested</string>
    <string name="unfriend">Unfollow</string>
    <string name="friend_request_sent">Follow Request Sent</string>
    <string name="friend_removed">Follower Removed</string>
    <string name="error_friend_not_removed">Error Delete Follower</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="post">Post</string>
    <string name="view_post">View Post</string>
    <string name="invite_friends_to_join">Invite Followers to Join</string>
    <string name="invite_more_friends_to_join_the_discussion_now">Invite more followers to join the discussion now!!</string>
    <string name="done">Done</string>
    <string name="search_by_name">search by name</string>
    <string name="assignment">Assignment</string>
    <string name="visual_learning">Visual Learning</string>
    <string name="join">Join</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="_4_comments">4 comments</string>
    <string name="new_password">New Password</string>
    <string name="new_password_title">New Password</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="submit_passRecover">Submit</string>
    <string name="search_chat_friends">Search Chat</string>
    <string name="search_your_friends">search your friends</string>
    <string name="chat">Chat</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="prc_email">Email</string>
    <string name="security_question">What is your favorite movie?</string>
    <string name="prc_submit">Submit</string>
    <string name="need_help">Need help?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_groups">Groups</string>
    <string name="profile_friends">Followers</string>
    <string name="create_post">New Post</string>
    <string name="sign_up">Sign UP</string>
    <string name="signUpName">Name</string>
    <string name="signUpMobile_number">Mobile Number</string>
    <string name="signUpBirthday">Birthday</string>
    <string name="signUpPassword">Password</string>
    <string name="signUp_security_question">What is your favorite movie?</string>
    <string name="signUp_sign_up_btn">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="SignUpEmail">Email</string>
    <string name="find_friends">Find Users</string>
    <string name="study_with_other_study_partner">Find more users !!</string>
    <string name="search_by_name_category_or_learning_styles">Search by name</string>
    <string name="search_friends">Search Friends</string>
    <string name="suggest_friends">Suggest to follow</string>
    <string name="search_a_post">Search a Post</string>
    <string name="explore_something_special">Explore something special...</string>
    <string name="search_for_post">Search for any post ...</string>
    <string name="type_something_to_search">Type something to search</string>
    <string name="search">Search</string>
    <string name="suggest_post">Suggested Post :</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="setting_about_us">About Us</string>
    <string name="setting_contact_us">Contact Us</string>
    <string name="setting_language">Language</string>
    <string name="sign_in">Sign IN</string>
    <string name="signIn_email">Email</string>
    <string name="signIn_password">Password</string>
    <string name="sigIn_btn_sign_in">Sign In</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="home">Home</string>
    <string name="settings_menu">Settings</string>
    <string name="chat_menu">Chat</string>
    <string name="profile_menu">Profile</string>
    <string name="sign_out_menu">Sign Out</string>
    <string name="menu_open" translatable="false">Open</string>
    <string name="menu_close" translatable="false">Close</string>
    <string name="course_profile">Course</string>
    <string name="email_sample">abc-xx21@student.tarc.edu.my</string>
    <string name="name_sample">ABC</string>
    <string name="mobileNo_sample">0123456789</string>
    <string name="birthday_sample">01/01/1999</string>
    <string name="select_date">Date</string>
    <string name="time_ago">10 mins ago</string>
    <string name="few_ago">Few days ago</string>
    <string name="week_ago">1 week ago</string>
    <string name="month_ago">1 month ago</string>
    <string name="custom_date">Custom date</string>
    <string name="from_date">From :</string>
    <string name="until_date">Until :</string>
    <string name="all_category">All</string>
    <string name="business">Business</string>
    <string name="sci">Science</string>
    <string name="art">Art / Design</string>
    <string name="it">IT</string>
    <string name="sport">Sport</string>
    <string name="lang">Language</string>
    <string name="revision">Revision</string>
    <string name="studyBuddy">Find Study Buddies</string>
    <string name="helper">Find Helper</string>
    <string name="other">Other</string>
    <string name="privacy">Privacy</string>
    <string name="publicPrivacy">Public</string>
    <string name="privatePrivacy">Private</string>
    <string name="resPrivacy">Restricted</string>
    <string name="chooseRestricted">Choose restricted user :</string>
    <string name="friend_request">Follow Request</string>
    <string name="approve_or_ignore">Approve or Ignore Follow Requests</string>
    <string name="today">Today</string>
    <string name="confirm_btn">Confirm</string>
    <string name="accept_btn">Accept</string>
    <string name="del_btn">Delete</string>
    <string name="reject_btn">Delete</string>
    <string name="feedback_title">Rate Of TARUMT Campus Hub</string>
    <string name="follow">Follow</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="tar_map">TARUMT Map</string>
    <string name="explore">Explore</string>
    <string name="history_post">History Post</string>
    <string name="saved_post">Saved Post</string>
    <string name="liked_post">Liked Post</string>
    <string name="search_for_any_post_history">Search for any post history</string>
    <string name="search_post_history">Search post history</string>
    <string name="gender_label">Gender</string>
    <string-array name="filter_options">
        <item>All</item>
        <item>Follow</item>
    </string-array>
    <string name="course_label">Course</string>
</resources>