<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ErrorPage">

    <!-- Title -->

    <!-- Image -->

    <TextView
        android:id="@+id/tvErrorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/abhayalibre_semibold"
        android:text="@string/no_internet"
        android:textColor="@color/error_red"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgNoInternet"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/no_internet"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvErrorTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/no_internet" />

    <!-- OOPS Text -->
    <TextView
        android:id="@+id/tvOopsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opps"
        android:textColor="@color/error_red"
        android:textSize="32sp"
        android:fontFamily="@font/abhayalibre_semibold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imgNoInternet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Description -->
    <TextView
        android:id="@+id/tvErrorDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet_description"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/abhayalibre_semibold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvOopsText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Reload Button -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewReloadButton"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        android:background="@color/red_button"
        app:layout_constraintTop_toBottomOf="@id/tvErrorDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/red_button"
            android:background="@color/red_button"
            android:text="@string/reload"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:cardElevation="10dp"
            android:textSize="24sp"
            android:fontFamily="@font/abhayalibre_semibold" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
